--- a/Tafel Taferelen/Base.lproj/Main.storyboard
+++ b/Tafel Taferelen/Base.lproj/Main.storyboard
@@ -44,5 +44,23 @@
             </objects>
             <point key="canvasLocation" x="818" y="134"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="bGT-PK-hY2">
+            <objects>
+                <viewController id="v2b-pf-6nJ" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="H7q-XQ-jnK"/>
+                        <viewControllerLayoutGuide type="bottom" id="6hr-eo-YAP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2NL-I5-Sva">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ydZ-uo-NEU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1502" y="134"/>
+        </scene>
     </scenes>
 </document>
