--- a/Tafel Taferelen/Main.storyboard
+++ b/Tafel Taferelen/Main.storyboard
@@ -523,17 +523,12 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tSe-S2-H5E">
-                                <rect key="frame" x="16" y="141" width="98" height="21"/>
+                                <rect key="frame" x="16" y="141" width="318" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Deelnemers">
                                         <attributes>
                                             <font key="NSFont" size="17" name="HelveticaNeue-UltraLight"/>
-                                        </attributes>
-                                    </fragment>
-                                    <fragment content=":">
-                                        <attributes>
-                                            <font key="NSFont" metaFont="system" size="17"/>
                                         </attributes>
                                     </fragment>
                                 </attributedString>
@@ -544,7 +539,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Trm-bS-Sg6">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="Trm-bS-Sg6" customClass="GroupsTableViewCell" customModule="Tafel_Taferelen" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="74"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Trm-bS-Sg6" id="KaK-Z0-x1M">
@@ -552,11 +547,11 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jiv-RD-P87">
-                                                    <rect key="frame" x="8" y="0.0" width="79" height="65"/>
+                                                    <rect key="frame" x="8" y="4" width="79" height="65"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AP1-3W-UWb">
-                                                    <rect key="frame" x="95" y="0.0" width="42" height="21"/>
+                                                    <rect key="frame" x="95" y="17" width="272" height="38"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -564,8 +559,16 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="groupMemberName" destination="AP1-3W-UWb" id="KpM-Zq-VCp"/>
+                                            <outlet property="groupMemberProfpic" destination="jiv-RD-P87" id="B9i-rl-npo"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="2SO-S5-KQ2" id="dmY-hn-rTY"/>
+                                    <outlet property="delegate" destination="2SO-S5-KQ2" id="5Y6-pg-ghK"/>
+                                </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8F7-YA-84n">
                                 <rect key="frame" x="8" y="20" width="34" height="15"/>
@@ -612,10 +615,15 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="countMembers" destination="tSe-S2-H5E" id="g1j-WV-KXi"/>
+                        <outlet property="groupName" destination="E9x-nK-dET" id="8w5-jq-mvC"/>
+                        <outlet property="tableView" destination="g7q-yj-XXN" id="47M-pY-D2r"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TlZ-1y-o3U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2316" y="-74"/>
+            <point key="canvasLocation" x="2316" y="-74.212893553223395"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tg0-bJ-sai">
@@ -823,7 +831,7 @@
         <image name="headonly" width="640" height="480"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="WIU-RG-VAi"/>
+        <segue reference="HND-WY-kwr"/>
         <segue reference="enR-rK-Mny"/>
     </inferredMetricsTieBreakers>
 </document>
