--- a/Tafel Taferelen/Main.storyboard
+++ b/Tafel Taferelen/Main.storyboard
@@ -261,6 +261,7 @@
                                 <state key="normal" title="Maak groep aan"/>
                                 <connections>
                                     <action selector="createNewGroupPressed:" destination="qey-EE-Hqu" eventType="touchUpInside" id="Fnw-wC-Koe"/>
+                                    <segue destination="K8s-PV-joo" kind="show" id="fxd-p7-vNQ"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QEl-5k-wh0">
@@ -578,14 +579,6 @@
                                     <segue destination="K8s-PV-joo" kind="show" id="HND-WY-kwr"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Ra-y6-R6s">
-                                <rect key="frame" x="8" y="566" width="142" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Wijzig instellingen "/>
-                                <connections>
-                                    <segue destination="sbN-8O-0cg" kind="show" id="enR-rK-Mny"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rEY-dm-jfS">
                                 <rect key="frame" x="8" y="83" width="98" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -612,12 +605,28 @@
                                 </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Voeg nieuwe deelnemer toe (email)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZtT-Qg-ucT">
+                                <rect key="frame" x="8" y="575" width="311" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T8Y-uq-3K3">
+                                <rect key="frame" x="339" y="579" width="22" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="addNewMemberPressed:" destination="2SO-S5-KQ2" eventType="touchUpInside" id="bI3-FC-7OO"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="addNewMemberBtn" destination="T8Y-uq-3K3" id="5o4-uJ-dsC"/>
                         <outlet property="countMembers" destination="tSe-S2-H5E" id="g1j-WV-KXi"/>
                         <outlet property="groupName" destination="E9x-nK-dET" id="8w5-jq-mvC"/>
+                        <outlet property="newEmailField" destination="ZtT-Qg-ucT" id="k99-Bu-Au9"/>
                         <outlet property="tableView" destination="g7q-yj-XXN" id="47M-pY-D2r"/>
                     </connections>
                 </viewController>
@@ -625,10 +634,10 @@
             </objects>
             <point key="canvasLocation" x="2316" y="-74.212893553223395"/>
         </scene>
-        <!--View Controller-->
+        <!--Dinner Info View Controller-->
         <scene sceneID="tg0-bJ-sai">
             <objects>
-                <viewController id="775-ON-1wk" sceneMemberID="viewController">
+                <viewController id="775-ON-1wk" customClass="DinnerInfoViewController" customModule="Tafel_Taferelen" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="CH5-He-G2O"/>
                         <viewControllerLayoutGuide type="bottom" id="qZu-oc-o1o"/>
@@ -703,7 +712,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4oN-4r-1eN">
-                                <rect key="frame" x="16" y="242" width="158" height="30"/>
+                                <rect key="frame" x="16" y="242" width="343" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Millet">
@@ -713,6 +722,9 @@
                                     </fragment>
                                 </attributedString>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="locationChanged:" destination="775-ON-1wk" eventType="editingDidEnd" id="avX-YJ-8r1"/>
+                                </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fWd-dQ-dk9">
                                 <rect key="frame" x="16" y="180" width="158" height="33"/>
@@ -755,10 +767,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="chefNextDinnerField" destination="0Zm-l4-SJa" id="fsX-br-eLo"/>
+                        <outlet property="dateNextDinnerField" destination="fWd-dQ-dk9" id="hTA-0h-Egh"/>
+                        <outlet property="groupNameLabel" destination="syh-y1-knK" id="hb9-pv-C0u"/>
+                        <outlet property="locationNextDinnerField" destination="4oN-4r-1eN" id="sKx-tV-pJn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uXY-4O-3ZN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2316" y="727"/>
+            <point key="canvasLocation" x="2316" y="726.38680659670172"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="eV6-Aj-mW5">
@@ -831,7 +849,6 @@
         <image name="headonly" width="640" height="480"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="HND-WY-kwr"/>
-        <segue reference="enR-rK-Mny"/>
+        <segue reference="fxd-p7-vNQ"/>
     </inferredMetricsTieBreakers>
 </document>
